router/envoy-development.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 3000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: home
              domains:
              - "*"
              routes:
              - match:
                  prefix: /scoreboard-backend
                route:
                  cluster: scoreboard-backend

              - match:
                  prefix: /scoreboard
                route:
                  cluster: scoreboard-frontend

              - match:
                  prefix: /auth
                route:
                  cluster: auth

              - match:
                  prefix: /recipes
                route:
                  cluster: recipes

              - match:
                  prefix: /movies
                route:
                  cluster: movies

              - match:
                  prefix: /tasks-backend
                route:
                  cluster: tasks-backend

              - match:
                  prefix: /tasks
                route:
                  cluster: tasks-frontend

              - match:
                  prefix: /budget-backend
                route:
                  cluster: budget-backend

              - match:
                  prefix: /budget
                route:
                  cluster: budget-frontend

              - match:
                  prefix: /exercise
                route:
                  cluster: exercise

              - match:
                  prefix: /
                route:
                  cluster: home
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: scoreboard-frontend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3004

  - name: scoreboard-backend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3003

  - name: auth
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3005

  - name: recipes
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3007

  - name: budget-backend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3001

  - name: movies
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3002

  - name: home
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3006

  - name: tasks-backend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3008

  - name: tasks-frontend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3009

  - name: budget-frontend
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3010

  - name: exercise
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: docker.for.mac.localhost
        port_value: 3011

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
