router/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
          - name: envoy.file_access_log
            config:
              path: /dev/stdout
          route_config:
            name: local_route
            virtual_hosts:
            - name: home
              domains:
              - "*"
              routes:
              - match:
                  prefix: /scoreboard
                route:
                  cluster: scoreboard-frontend

              - match:
                  prefix: /auth
                route:
                  cluster: auth

              - match:
                  prefix: /recipes
                route:
                  cluster: recipes

              - match:
                  prefix: /budget-backend
                route:
                  cluster: budget-backend

              - match:
                  prefix: /budget
                route:
                  cluster: budget-frontend

              - match:
                  prefix: /movies
                route:
                  cluster: movies

              - match:
                  prefix: /tasks-backend
                route:
                  cluster: tasks-backend

              - match:
                  prefix: /tasks
                route:
                  cluster: tasks-frontend

              - match:
                  prefix: /exercise
                route:
                  cluster: exercise

              - match:
                  prefix: /
                route:
                  cluster: home
          http_filters:
          - name: envoy.router
            config: {}
  clusters:
  - name: scoreboard-frontend
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: scoreboard-frontend
        port_value: 80

  - name: auth
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: auth
        port_value: 80

  - name: recipes
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: recipes
        port_value: 80

  - name: budget-backend
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: budget-backend
        port_value: 80

  - name: movies
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: movies
        port_value: 80

  - name: home
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: home
        port_value: 80

  - name: tasks-backend
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: tasks-backend
        port_value: 80

  - name: tasks-frontend
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: tasks-frontend
        port_value: 80

  - name: budget-frontend
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: budget-frontend
        port_value: 80

  - name: exercise
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      http_health_check:
        path: "/health"
    connect_timeout: 2.5s
    type: strict_dns
    lb_policy: round_robin
    max_requests_per_connection: 1
    hosts:
    - socket_address:
        address: exercise
        port_value: 80

admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
